--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@import "reset.css";
+
 body {
   margin: 0;
+  width:1920px;
+  height:1024px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
